fixed z-index glitch on cart dropdown, added cart cleanup on checkout

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -1,9 +1,10 @@
 .header-fixer {
-  position: absolute;
+  position: fixed;
   height: 70px;
   width: 100%;
   left: 0px;
   top: 0px;
+  z-index: 1;
 
 
   .header {
